Changelog
=========

4.0a1 - unreleased
------------------

- Removed all dependencies on zope.app packages.
  [hannosch]

- Specify all package dependencies.
  [hannosch]

- Added dependency on Plone 4. Please use a release from the 3.x series if
  you are using Plone 3.
  [hannosch]

3.1 - 2010-07-28
----------------

- No changes.

3.1b1 - 2010-07-18
------------------

- Update license to GPL version 2 only.
  [hannosch]

- If catalog filter attributes contain "Language", and "Language" is
  set to all, don't add Language filters to the REQUEST object
  [do3cc]

3.1a5 - 2010-06-22
------------------

- Use a normal FieldIndex in the uid_catalog and correct custom setuphandler
  to create a functional FieldIndex.
  [hannosch]

3.1a4 - 2010-06-18
------------------

- Removed example types, Plone's default types are LinguaPlone aware and
  provide a good demo of the functionality.
  [hannosch]

- Refactored tests and conform to PEP8 in more places.
  [hannosch]

- Changed the default index used for Language to be a normal FieldIndex. For
  most sites this is sufficient and avoids the major performance hit the
  LanguageIndex brings with it.
  [hannosch]

- Refactor selector code to make it easier to write unit tests for it.
  [hannosch]

- Added development information to README, this closes
  http://plone.org/products/linguaplone/issues/242.
  [hannosch]

- Lessen optimization in selector code, to deal with folderish objects used as
  default pages, refs http://plone.org/products/linguaplone/issues/228.
  [hannosch]

- Removed iterator for tabindex for Plone 4 compatibility.
  [hpeteragitator]

3.1a3 - 2010-05-25
------------------

- Small optimizations in invalidateTranslations, deletable language vocabulary
  and script - avoiding review state calculation and full object lookups.
  [hannosch]

- Removed logger instance and log method from ``config.py``.
  [hannosch]

- Removed unused variables from ``config.py``: ``DEBUG``, ``GLOBALS``,